# sbn_ml_cafmaker

./: .gitignore  CMakeLists.txt  README.md  buffer_view.h  create_cpp_objects.py  hdf5_utilities.h  main.cc  make_caf.sh  make_caf_data.sh  make_caf_simulation.sh  make_standalone.cc  make_standalone_data  make_standalone_simulation  match_files.sh  merge_sources.cc  merge_sources_data  merge_sources_data_multi  merge_sources_multi.cc  merge_sources_simulation  merge_sources_simulation_multi  record_fillers.h  sbn_h5_classes.cc  sbn_h5_classes.h  test_caf  test_caf.cc  test_hdf5
include/: buffer.h  buffer_view.h  composites.h  enums.h  event.h  products.h  reco_interaction.h  reco_particle.h  record_fillers.h  runinfo.h  true_interaction.h  true_particle.h
src/: CMakeLists.txt  buffer.cc  enums.cc  event.cc  products.cc  reco_interaction.cc  reco_particle.cc  record_fillers.cc  runinfo.cc  test_hdf5.cc  true_interaction.cc  true_particle.cc
src/Apps/: CMakeLists.txt  make_standalone.cc  merge_sources.cc  merge_sources_multi.cc
src/Base/: CMakeLists.txt  buffer.cc  enums.cc  reco_particle.cc  runinfo.cc  true_particle.cc
tools/: manager.py  print_attributes.py  print_files.py
